--- a/app/src/main/res/layout/fragment_ekyc.xml
+++ b/app/src/main/res/layout/fragment_ekyc.xml
@@ -10,43 +10,63 @@
             type="com.tarrakki.module.ekyc.EKYCVM" />
     </data>
 
-    <ScrollView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".module.ekyc.EKYCFragment">
 
-        <android.support.constraint.ConstraintLayout
+        <!--<org.supportcompact.widgets.ZoomableImageView
+            android:id="@+id/ivEKYC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ekyc"
+            app:layout_constraintBottom_toTopOf="@id/btnContinue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />-->
+
+        <com.otaliastudios.zoom.ZoomImageView
+            android:id="@+id/ivEKYC"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scrollbars="vertical|horizontal"
+            app:alignment="center"
+            app:animationDuration="280"
+            app:flingEnabled="true"
+            app:horizontalPanEnabled="true"
+            app:layout_constraintBottom_toTopOf="@id/btnContinue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:maxZoom="2.5"
+            app:maxZoomType="zoom"
+            app:minZoom="0.7"
+            app:minZoomType="zoom"
+            app:overPinchable="true"
+            app:overScrollHorizontal="true"
+            app:overScrollVertical="true"
+            app:transformation="centerInside"
+            app:transformationGravity="auto"
+            app:verticalPanEnabled="true"
+            app:zoomEnabled="true" />
+
+
+        <Button
+            android:id="@+id/btnContinue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".module.ekyc.EKYCFragment">
+            android:layout_marginStart="@dimen/default_space"
+            android:layout_marginTop="@dimen/space_8"
+            android:layout_marginEnd="@dimen/default_space"
+            android:layout_marginBottom="@dimen/default_space"
+            android:background="@drawable/shape_btn_idle_bg"
+            android:fontFamily="@font/lato_semibold"
+            android:text="@string/txtcontinue"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivEKYC"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_marginTop="@dimen/default_space" />
 
-            <ImageView
-                android:id="@+id/ivEKYC"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ekyc"
-                app:layout_constraintBottom_toTopOf="@id/btnContinue"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/btnContinue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_space"
-                android:layout_marginEnd="@dimen/default_space"
-                android:layout_marginBottom="@dimen/default_space"
-                android:layout_marginTop="@dimen/space_16"
-                android:background="@drawable/shape_btn_idle_bg"
-                android:fontFamily="@font/lato_semibold"
-                android:text="@string/txtcontinue"
-                android:textColor="@android:color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivEKYC"
-                tools:layout_marginTop="@dimen/default_space" />
-
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
+    </android.support.constraint.ConstraintLayout>
 </layout>
