1:Implemented web page privacy policy and Terms & Conditions page 2:Implemented validation and navigation flow for e-kyc registration form.

--- a/app/src/main/res/layout/fragment_ekyc_web_view.xml
+++ b/app/src/main/res/layout/fragment_ekyc_web_view.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="vm"
-            type="com.tarrakki.module.webview.WebViewVM" />
+            type="com.tarrakki.module.ekyc.EKYCWebViewVM" />
     </data>
 
     <android.support.constraint.ConstraintLayout
