--- a/app/src/main/res/layout/fragment_kycregistration_a.xml
+++ b/app/src/main/res/layout/fragment_kycregistration_a.xml
@@ -62,45 +62,6 @@
                     app:layout_constraintTop_toBottomOf="@id/tvFName" />
 
                 <TextView
-                    android:id="@+id/tvPAN"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:layout_marginEnd="@dimen/space_4"
-                    android:text="@string/pan_number"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    app:layout_constraintEnd_toStartOf="@id/tvDOBL"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtFName" />
-
-                <EditText
-                    android:id="@+id/edtPAN"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_4"
-                    android:layout_marginEnd="@dimen/space_4"
-                    android:alpha="@{vm.alpha}"
-                    android:background="@drawable/shape_edt_gray_round"
-                    android:enabled="@{vm.isEdit()}"
-                    android:hint="@string/pan_number"
-                    android:inputType="textCapCharacters"
-                    android:maxLines="1"
-                    android:paddingStart="@dimen/default_space"
-                    android:paddingTop="@dimen/space_8"
-                    android:paddingEnd="@dimen/default_space"
-                    android:paddingBottom="@dimen/space_8"
-                    android:text="@={vm.PANNumber}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/darker_gray"
-                    app:layout_constraintEnd_toStartOf="@id/edtDOB"
-                    app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvPAN" />
-
-
-                <TextView
                     android:id="@+id/tvDOBL"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -108,17 +69,17 @@
                     android:layout_marginTop="@dimen/default_space"
                     android:text="@string/date_of_birth_"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/tvPAN"
                     app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toEndOf="@id/tvPAN"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/edtFName" />
 
                 <TextView
                     android:id="@+id/edtDOB"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/space_4"
                     android:layout_marginTop="@dimen/space_4"
+                    android:layout_marginEnd="@dimen/space_4"
                     android:alpha="@{vm.alpha}"
                     android:background="@drawable/shape_edt_gray_round"
                     android:drawableEnd="@drawable/ic_calendar"
@@ -133,10 +94,51 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toStartOf="@id/edtPAN"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvDOBL" />
+
+                <TextView
+                    android:id="@+id/tvPAN"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginEnd="@dimen/space_4"
+                    android:text="@string/pan_number"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
-                    app:layout_constraintStart_toEndOf="@id/edtPAN"
+                    app:layout_constraintStart_toEndOf="@id/tvDOBL"
+                    app:layout_constraintTop_toBottomOf="@id/edtFName" />
+
+                <EditText
+                    android:id="@+id/edtPAN"
+                    isPANCard="@{true}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/space_4"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:alpha="@{vm.alpha}"
+                    android:background="@drawable/shape_edt_gray_round"
+                    android:enabled="@{vm.isEdit()}"
+                    android:hint="@string/pan_number"
+                    android:inputType="textCapCharacters"
+                    android:maxLength="10"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={vm.PANNumber}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_weight="1"
+                    app:layout_constraintStart_toEndOf="@id/edtDOB"
                     app:layout_constraintTop_toBottomOf="@id/tvPAN" />
+
 
                 <TextView
                     android:id="@+id/tvEmailID"
@@ -307,13 +309,46 @@
                     android:paddingTop="@dimen/space_8"
                     android:paddingEnd="@dimen/default_space"
                     android:paddingBottom="@dimen/space_8"
-                    android:text="@={vm.address}"
+                    android:text="@={vm.addressType}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     android:textColorHint="@color/darker_gray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvAddressTypeL" />
+
+                <TextView
+                    android:id="@+id/tvAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/address_type"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/edtAddressType" />
+
+                <EditText
+                    android:id="@+id/edtAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:alpha="@{vm.alpha}"
+                    android:background="@drawable/shape_edt_gray_round"
+                    android:enabled="@{vm.isEdit()}"
+                    android:hint="@string/address"
+                    android:inputType="textCapSentences"
+                    android:maxLines="1"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingTop="@dimen/space_8"
+                    android:paddingEnd="@dimen/default_space"
+                    android:paddingBottom="@dimen/space_8"
+                    android:text="@={vm.address}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/darker_gray"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvAddress" />
 
 
                 <TextView
@@ -327,7 +362,7 @@
                     app:layout_constraintEnd_toStartOf="@id/tvPincodeL"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtAddressType" />
+                    app:layout_constraintTop_toBottomOf="@id/edtAddress" />
 
                 <EditText
                     android:id="@+id/edtCity"
@@ -366,7 +401,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="1"
                     app:layout_constraintStart_toEndOf="@id/tvCityL"
-                    app:layout_constraintTop_toBottomOf="@id/edtAddressType" />
+                    app:layout_constraintTop_toBottomOf="@id/edtAddress" />
 
                 <EditText
                     android:id="@+id/edtPincode"
